<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventory.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/picture_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="36sp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_photo" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <ImageView
                    android:id="@+id/Photo_imageView"
                    android:layout_width="200dp"
                    android:layout_height="100dp" />

            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Browse"
                android:onClick="onClickBrowse"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/hint_product_name" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/DetailsFieldStyle"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_measurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/price_title" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/DetailsFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/label_price_unit"
                    style="@style/DetailsUnitsStyle"
                    android:text="@string/unit_product_price" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quantity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/quantity_title" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/DetailsFieldStyle"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="number" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/supplier_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/hint_product_supplier" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_product_supplier"
                    style="@style/DetailsFieldStyle"
                    android:hint="@string/hint_product_supplier"
                    android:inputType="textCapWords" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_sale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_sale" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">


                <Spinner
                    android:id="@+id/spinner_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_shipement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/shipment_title" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">


                <Spinner
                    android:id="@+id/spinner_shipement"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickOrder"
                android:text="Order"
                android:textAllCaps="false"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/increase_quantity_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="42dp"
                android:layout_marginStart="42dp"
                android:onClick="onClickIncrease"
                android:text="+"
                android:textAllCaps="false"
                android:layout_marginBottom="28dp"
                android:layout_above="@+id/order_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/decrease_quantity_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:onClick="onClickDecrease"
                android:text="-"
                android:layout_alignBaseline="@+id/changing_value_etv"
                android:layout_alignBottom="@+id/changing_value_etv"
                android:layout_toRightOf="@+id/order_button"
                android:layout_toEndOf="@+id/order_button" />

            <EditText
                android:id="@+id/changing_value_etv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:hint="Change"
                android:inputType="number"
                android:layout_alignTop="@+id/increase_quantity_button"
                android:layout_alignLeft="@+id/order_button"
                android:layout_alignStart="@+id/order_button"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
